Fix: update keywords in package.json

--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "mongodb",
     "atlas",
     "pino",
-    "jest"
+    "jest",
+    "eslint",
+    "prettier",
+    "husky",
+    "nodemon",
+    "supertest"
   ],
   "author": "Wubshet Zeleke",
   "license": "ISC",
