--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "create-express-ts-starter",
-  "version": "1.0.1",
+  "name": "@easy-starters/create-express-ts-starter",
+  "version": "1.0.2",
   "description": "starter boilerplate with Typescript + Express + Mongoose + MongoDB + Pino + Jest",
   "bin": "./bin/script.js",
   "main": "dist/server.js",
